kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexvion
  namespace: nexvion
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: nexvion

  template:
    metadata:
      labels:
        app: nexvion

    spec:
      containers:
        - name: nexvion
          image: nidhi8901/nexvion:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
