kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexvion-service
  namespace: nexvion
spec:
  selector:
    app: nexvion

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
